version/0.13/_sources/api/solver/_autosummary/settings/formation_enthalpy.rst.txt
:orphan:

.. _formation_enthalpy:

formation_enthalpy
==================

.. autoclass:: ansys.fluent.core.solver.settings_231.formation_enthalpy.formation_enthalpy

.. rubric:: Attributes

========================   ====================================================

Attribute                                                               Summary

========================   ====================================================
:ref:`option <option_9>`       Select method for calculating material property.

:ref:`value <value>`                                             'value' child.

========================   ====================================================

.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`fluid_child <fluid_child>`       'child_object_type' of fluid.

================================   =================================

